--- a/index DUDAR.html
+++ b/index DUDAR.html
@@ -11,7 +11,7 @@
 </head>
 
 <!--investigation of Git hub-->
-<!--investigation of Git hub try 3-->
+<!--investigation of Git hub  gitignore from brackets-->
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -30,6 +30,7 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#"><i class="fas fa-envelope-square  "></i></a></li>
                 </ul>
